--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<div class="container-fluid">
 			<h1>Veillez vous enregistez...</h1>
 			<form id="form">
-				<input type="text" placeholder="Entrez votre nom" id="nom" >
-				<input type="text" placeholder="Entrez votre postnom" id="postnom" >
-				<input type="text" placeholder="Entrez votre prenom" id="prenom" >
-				<input type="text" placeholder="Entrez votre pays" id="pays" >
-				<input type="text" placeholder="Homme ou Femme ?" id="genre" >
-				<input type="email" placeholder="Adresse Github" id="git" >
+				<input type="text" placeholder="Entrez votre nom" id="nom" required="required">
+				<input type="text" placeholder="Entrez votre postnom" id="postnom" required="required">
+				<input type="text" placeholder="Entrez votre prenom" id="prenom" required="required">
+				<input type="text" placeholder="Entrez votre pays" id="pays" required="required">
+				<input type="text" placeholder="Homme ou Femme ?" id="genre" required="required">
+				<input type="email" placeholder="Adresse Github" id="git" required="required">
 				<button type="submit" id="btnSubmit" class="btn btn-primary" style="font-size: 25px;"></button>
 			</form>
 		</div>
